spring framework version of a lambda function